.provarCaches/00D5f000005vwGkEAI/objects/rstkf__apcheckstub__c.object
<CustomObject>
    <description>apcheckstub__c</description>
    <fields>
        <fullName>rstkf__apcheckstub_amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apcheckstub_amtwht__c</fullName>
        <description>WHT Amount</description>
        <inlineHelpText>WHT Amount</inlineHelpText>
        <label>WHT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apcheckstub_apcheck__c</fullName>
        <label>AP Check</label>
        <referenceTo>rstkf__apcheck__c</referenceTo>
        <relationshipLabel>AP Check Stub Detail</relationshipLabel>
        <relationshipName>apcheckstubs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__apcheckstub_apinvtxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Payable Transaction</description>
        <inlineHelpText>This field provides a link back to the AP Transaction associated with the payment detail</inlineHelpText>
        <label>Payable Transaction</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipLabel>AP Check Stub Detail</relationshipLabel>
        <relationshipName>apcheckstubs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apcheckstub_disctaken__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Taken</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apcheckstub_docamt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apcheckstub_docdate__c</fullName>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apcheckstub_docno__c</fullName>
        <label>Document Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apcheckstub_remitdesc__c</fullName>
        <description>Remittance Advice Description</description>
        <inlineHelpText>This field provides payment information for this transaction that can enable the Vendor’s Accounting team to match the payment to Invoices.</inlineHelpText>
        <label>Remittance Advice Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__apcheckstub_apcheck__r.rstkf__externalid__c + rstkf__apcheckstub_docno__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__apcheckstub_apcheck__r.rstkf__apcheck_checknumber__c + &apos;(&apos; + rstkf__apcheckstub_docno__c + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>AP Check Stub Detail</label>
    <listViews>
        <fullName>rstkf__RS_AP_Check_Stub_Detail</fullName>
        <columns>NAME</columns>
        <columns>rstkf__apcheckstub_docno__c</columns>
        <columns>rstkf__apcheckstub_amount__c</columns>
        <columns>rstkf__apcheckstub_apcheck__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>AP Check Stub Detail</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_AP_Check_Stub_Detail_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstkf__apcheckstub_docno__c</columns>
        <columns>rstkf__apcheckstub_amount__c</columns>
        <columns>rstkf__apcheckstub_apcheck__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>AP Check Stub Detail - Filtered</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>AP Check Stub Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AP Check Stub Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>